Adres not showing fix

--- a/style.css
+++ b/style.css
@@ -210,8 +210,8 @@ main img {
         justify-content: center;
         width: 100%;
         padding-left: 0;
-        height: 100%;
-        max-height: 510px;
+        height: 0;
+        max-height: 0;
     }
     main img {
         position: absolute;
